data loader added

--- a/trials.ipynb
+++ b/trials.ipynb
@@ -37,10 +37,38 @@
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
     "from langchain.vectorstores import Pinecone\n",
     "import pinecone \n",
-    "from langchain.document_loaders import PyMuPDFLoader, DirectoryLoader\n",
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.llms import CTransformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = \"29c0a439-c6c7-4849-a846-f033dcf4386a\"\n",
+    "PINECONE_API_ENV = \"gcp-starter\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract data from the PDF file\n",
+    "\n",
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(data, \n",
+    "                    glob=\"*.pdf\",\n",
+    "                    loader_cls=PyPDFLoader)\n",
+    "    \n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    return documents"
    ]
   },
   {
