store index and helper added

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -45,12 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = \"29c0a439-c6c7-4849-a846-f033dcf4386a\"\n",
-    "PINECONE_API_ENV = \"gcp-starter\""
+    "## Set the env key \n",
+    "\n",
+    "PINEKONE_API_KEY = \"\"\n",
+    "PINECONE_API_ENV = \"\""
    ]
   },
   {
